@@ -7,7 +7,7 @@ describe ApiTester::InjectionModule do
   let(:expected_response) { "{'error':'bad request'}" }
   let(:good_request) { "{'actual': 'something'}" }
   let(:bad_request) { { 'actual'=>'string%7C' } }
-  let(:contract) { ApiTester::Contract.new 'Test', url }
+  let(:contract) { ApiTester::Contract.new name: 'Test', base_url: url }
   let(:endpoint) { ApiTester::Endpoint.new 'test', '' }
 
   before :each do
