@@ -2,7 +2,7 @@ require 'api-tester/modules/server_information'
 
 describe ApiTester::ServerInformation do
   let(:url) { 'test.com' }
-  let(:contract) { ApiTester::Contract.new 'Test', url }
+  let(:contract) { ApiTester::Contract.new name: 'Test', base_url: url }
   let(:endpoint) { ApiTester::Endpoint.new 'Test Endpoint', '' }
 
   before(:each) do
