@@ -19,7 +19,7 @@ describe ApiTester::UnusedFields do
     let(:code) { 200 }
     let(:response) { ApiTester::Response.new code }
     let(:endpoint) { ApiTester::Endpoint.new 'Test', '' }
-    let(:contract) { ApiTester::Contract.new 'Test', url }
+    let(:contract) { ApiTester::Contract.new name: 'Test', base_url: url }
 
     before :each do
       fields.each do |field|
